invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_27.src
.IPPcode24
IDIV LF@d int@49 string@henlo LF@a